// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPanelButton renders from content 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    aria-label="info and examples"
    classname="info"
    icon="[object Object]"
  >
    TEXT
  </mock-button>
</DocumentFragment>
`;

exports[`ContentPanelButton renders from content: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-label": "info and examples",
  "children": "TEXT",
  "className": "info",
  "icon": <InfoRegular />,
  "onClick": [Function],
}
`;

exports[`ContentPanelButton renders from path 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    aria-label="info and examples"
    classname="info"
  >
    TEXT
  </mock-button>
</DocumentFragment>
`;

exports[`ContentPanelButton renders from path: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-label": "info and examples",
  "children": "TEXT",
  "className": "info",
  "icon": undefined,
  "onClick": [Function],
}
`;

exports[`ContentPanelButton renders without iconName 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    aria-label="info and examples"
    classname="info"
  >
    TEXT
  </mock-button>
</DocumentFragment>
`;

exports[`ContentPanelButton renders without iconName: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-label": "info and examples",
  "children": "TEXT",
  "className": "info",
  "icon": undefined,
  "onClick": [Function],
}
`;
